refactor: Modernize for Java 25 idioms, syntax, and performance
- Adopt exhaustive pattern matching switch for sealed SessionEvent and AuthResult in AppState
- Use nested switch expression on SessionStatus with Objects.requireNonNullElse
- Optimize dependency injection with lazy Objects.requireNonNullElseGet in AppState
- Replace manual byte stream loops with input.readNBytes in WorkspaceFeedClient
- Adopt Java 22 unnamed variables (_) across 30+ exception catches and lambdas
- Replace legacy Paths.get with Path.of across XdgPaths, MachineBoundCrypto, and FreeRdpLocator
- Modernize Thread.sleep with Duration across AppState and PersistentCookieManager
- Adopt Sequenced Collections (getFirst) in WorkspaceFeedParserTest